[gd_scene load_steps=13 format=2]

[ext_resource path="res://Game/GUI/assets/font/Comfortaa-Bold.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Menu/MainMenu/assets/bg-pressed.png" type="Texture" id=2]
[ext_resource path="res://Game/GUI/controls/assets/refit_car.png" type="Texture" id=3]
[ext_resource path="res://Menu/LevelMenu/LevelMenu.gd" type="Script" id=4]
[ext_resource path="res://Menu/LevelMenu/assets/empty-map.png" type="Texture" id=5]
[ext_resource path="res://Menu/MainMenu/assets/bg-normal.png" type="Texture" id=6]
[ext_resource path="res://Menu/MainMenu/assets/main_menu/bg-color.png" type="Texture" id=7]
[ext_resource path="res://Menu/BikeMenu/Buttons/Current.tscn" type="PackedScene" id=8]
[ext_resource path="res://Game/GUI/counter/RMCounter.tscn" type="PackedScene" id=9]

[sub_resource type="DynamicFont" id=1]
size = 80
outline_size = 2
outline_color = Color( 0.4, 0.4, 0.4, 1 )
use_mipmaps = true
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 28
outline_size = 1
outline_color = Color( 0.533333, 0.388235, 0.211765, 1 )
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 62
outline_size = 2
use_filter = true
font_data = ExtResource( 1 )

[node name="LevelMenu" type="MarginContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="."]
margin_right = 1366.0
margin_bottom = 768.0
texture = ExtResource( 7 )

[node name="RMCounter" parent="TextureRect" instance=ExtResource( 9 )]
margin_left = 1236.46
margin_top = 25.0
margin_right = 1336.46
margin_bottom = 65.0

[node name="Title" type="Label" parent="TextureRect"]
margin_left = 25.8854
margin_top = 29.3583
margin_right = 722.885
margin_bottom = 128.358
custom_fonts/font = SubResource( 1 )
text = "Choose a level:"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SliderContainer" type="VBoxContainer" parent="TextureRect"]
margin_left = 49.0
margin_top = 133.0
margin_right = 1328.0
margin_bottom = 719.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Buttons" type="HBoxContainer" parent="TextureRect/SliderContainer"]
margin_right = 1279.0
margin_bottom = 56.0
rect_min_size = Vector2( 0, 40 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Current" parent="TextureRect/SliderContainer/Buttons" instance=ExtResource( 8 )]
text = "Your level"

[node name="Train" parent="TextureRect/SliderContainer/Buttons" instance=ExtResource( 8 )]
visible = false
margin_left = 224.0
margin_right = 444.0
text = "Train"

[node name="Level_0" parent="TextureRect/SliderContainer/Buttons" instance=ExtResource( 8 )]
margin_left = 224.0
margin_right = 444.0
hint_tooltip = "Level 0"
text = "Mountains"

[node name="Level_1" parent="TextureRect/SliderContainer/Buttons" instance=ExtResource( 8 )]
margin_left = 448.0
margin_right = 668.0
hint_tooltip = "Level 1"
disabled = true
text = "City"

[node name="Detail" type="HBoxContainer" parent="TextureRect/SliderContainer"]
margin_top = 60.0
margin_right = 1279.0
margin_bottom = 420.0
alignment = 1

[node name="Image" type="CenterContainer" parent="TextureRect/SliderContainer/Detail"]
margin_right = 637.0
margin_bottom = 360.0
rect_min_size = Vector2( 600, 360 )
size_flags_horizontal = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="TextureRect/SliderContainer/Detail/Image"]
position = Vector2( 18.8596, 31.3735 )
scale = Vector2( 0.696705, 0.68024 )
centered = false

[node name="EmptySprite" type="Sprite" parent="TextureRect/SliderContainer/Detail/Image"]
position = Vector2( 334, 214 )
scale = Vector2( 0.9, 0.76 )
texture = ExtResource( 5 )

[node name="MenuOptions" type="VBoxContainer" parent="TextureRect/SliderContainer/Detail"]
margin_left = 641.0
margin_right = 1279.0
margin_bottom = 360.0
rect_min_size = Vector2( 400, 360 )
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 0
alignment = 1

[node name="LevelIssue" type="Label" parent="TextureRect/SliderContainer/Detail/MenuOptions"]
margin_top = 60.0
margin_right = 638.0
margin_bottom = 120.0
rect_min_size = Vector2( 420, 60 )
custom_fonts/font = SubResource( 2 )
text = "<Name of level issue>"
align = 1
valign = 1

[node name="Level" type="Label" parent="TextureRect/SliderContainer/Detail/MenuOptions"]
margin_top = 120.0
margin_right = 638.0
margin_bottom = 180.0
rect_min_size = Vector2( 420, 60 )
custom_fonts/font = SubResource( 2 )
text = "level: ....... 0"
align = 1
valign = 1

[node name="Track" type="Label" parent="TextureRect/SliderContainer/Detail/MenuOptions"]
margin_top = 180.0
margin_right = 638.0
margin_bottom = 240.0
rect_min_size = Vector2( 420, 60 )
custom_fonts/font = SubResource( 2 )
text = "track: .......... 0	"
align = 1
valign = 1

[node name="Price" type="Label" parent="TextureRect/SliderContainer/Detail/MenuOptions"]
margin_top = 240.0
margin_right = 638.0
margin_bottom = 300.0
rect_min_size = Vector2( 420, 60 )
custom_fonts/font = SubResource( 2 )
text = "price: .................... 0"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonContainer" type="HBoxContainer" parent="TextureRect"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -119.841
margin_bottom = -43.8406
custom_constants/separation = 40
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="btn_menu" type="TextureButton" parent="TextureRect/ButtonContainer"]
margin_left = 43.0
margin_right = 443.0
margin_bottom = 76.0
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 2 )
__meta__ = {
"_editor_description_": ""
}

[node name="Label" type="Label" parent="TextureRect/ButtonContainer/btn_menu"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "Main menu"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="btn_refit" type="TextureButton" parent="TextureRect/ButtonContainer"]
margin_left = 483.0
margin_right = 883.0
margin_bottom = 76.0
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 2 )

[node name="TextureRect" type="TextureRect" parent="TextureRect/ButtonContainer/btn_refit"]
anchor_left = 0.584
anchor_top = -0.738
anchor_right = 0.584
anchor_bottom = -0.738
margin_left = -228.643
margin_top = 72.1586
margin_right = -3.64311
margin_bottom = 297.159
rect_scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="TextureRect/ButtonContainer/btn_refit"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "Progress"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="btn_pay" type="TextureButton" parent="TextureRect/ButtonContainer"]
margin_left = 923.0
margin_right = 1323.0
margin_bottom = 76.0
size_flags_horizontal = 8
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="TextureRect/ButtonContainer/btn_pay"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "Go"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="button_down" from="TextureRect/SliderContainer/Buttons/Current" to="." method="_on_Current_button_down"]
[connection signal="pressed" from="TextureRect/SliderContainer/Buttons/Current" to="." method="_on_Current_pressed"]
[connection signal="pressed" from="TextureRect/SliderContainer/Buttons/Train" to="." method="_on_Train_pressed"]
[connection signal="pressed" from="TextureRect/SliderContainer/Buttons/Level_0" to="." method="_on_Level_0_pressed"]
[connection signal="pressed" from="TextureRect/ButtonContainer/btn_menu" to="." method="_on_btn_menu_pressed"]
[connection signal="pressed" from="TextureRect/ButtonContainer/btn_refit" to="." method="_on_btn_refit_pressed"]
[connection signal="pressed" from="TextureRect/ButtonContainer/btn_pay" to="." method="_on_btn_pay_pressed"]
